--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -10,7 +10,7 @@
     />
     <script src="https://kit.fontawesome.com/6468c3e555.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>ClothesCorner</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
